OSP-Core: Upgrades JQuery to 3.6.0
OSP-Core: Upgrades to Bootstrap 5.1.3
OSP-Core: Upgrades Zlib to 1.2.12 / Fixes Invalid Download URL on Install
OSP-Core: Adds Playback Speed Rates to Video Playback (.25x, .5x, 1x, 1.5x, 2x)
OSP-Core: Adds startTime Argument to Clip Player playback, similar to how Video Playback works
OSP-Core: Additional Database Query Optimization and Caching
OSP-RTMP: Changes to Support allowRestream setting in OSP-Core
OSP-RTMP: Fix for RTMP/Edge handling when Adaptive Streams are Enabled - #459
OSP-RTMP: Moves all Live Stream Playback to use HLS Encryption and Moves Channel Protection to use Key Authorization Validation
OSP-Proxy: Updates to use HLS Key Encryption via Proxy

0.8.17
==============================================
OSP-Core: Fixes clipplayer.html caching issues
OSP-Core: Fixes Incorrect Live Viewer Counter on Stream Cards per Issue #433
OSP-Core: Enhanced Logging Structure within OSP-Core, adding a new config.py variable (log_level) to configure the Log Level returned to /opt/osp/logs/osp-error.log

0.8.16
==============================================
OSP-Core: Added /Search API Calls for Videos, Clips, Users, Streams, Channels and Topics - Returns ID value, Name, UUID (if available), and any other information for future search bar
OSP-Core: Fixed an issue displaying Clips on Channels with Subscriptions due to DB Caching
OSP-Core: Fixed and issue where validation of domain names was causing 405 error on FirstRun Setup

0.8.15
==============================================
OSP-Core: Added per channel option to allow unauthenticated users to provide nickname or use generated nickname
OSP-Core: Fixed a security issue where any authenticated user could alter any channel's chat settings (Room name, Description, Moderation Status)
OSP-Core: Fixed a security issue where an unauthorized user with streamer roles could add stickers to any channel

0.8.14
==============================================